[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/WinMenu.gd" type="Script" id=1]
[ext_resource path="res://assets/Menus/win.png" type="Texture" id=2]
[ext_resource path="res://assets/Menus/quit.png" type="Texture" id=3]
[ext_resource path="res://assets/Menus/tryagain.png" type="Texture" id=4]
[ext_resource path="res://assets/Menus/mainmenubutton.png" type="Texture" id=5]
[ext_resource path="res://assets/Menus/Courier_Prime/CourierPrime-Regular.ttf" type="DynamicFontData" id=6]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 6 )

[node name="WinMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="QuitButton" type="TextureButton" parent="."]
margin_left = 1280.0
margin_top = 672.0
margin_right = 1492.0
margin_bottom = 772.0
rect_scale = Vector2( 0.75, 0.75 )
texture_normal = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 684, 294 )
texture = ExtResource( 2 )

[node name="RestartButton" type="TextureButton" parent="."]
margin_left = 776.0
margin_top = 540.0
margin_right = 1240.0
margin_bottom = 640.0
rect_scale = Vector2( 0.75, 0.75 )
texture_normal = ExtResource( 4 )

[node name="MainMenuButton" type="TextureButton" parent="."]
margin_left = 357.0
margin_top = 540.0
margin_right = 821.0
margin_bottom = 640.0
rect_scale = Vector2( 0.75, 0.75 )
texture_normal = ExtResource( 5 )

[node name="TimeLabel" type="Label" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 560.0
margin_top = -114.0
margin_right = 920.0
margin_bottom = -58.0
custom_fonts/font = SubResource( 1 )
text = "Completed in 33:33"

[connection signal="pressed" from="QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="RestartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
